bpo-31243: Fixed PyArg_ParseTuple failure checks. (#3171)